# omniray

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  shamefile.yaml  sitemap.xml  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  dependency-review.yml  docs.yml  license-check.yml  lint.yml  publish.yml  release-drafter.yml  sbom.yml  sonar.yml  test.yml
benchmarks/: bench_overhead.py  bench_tracer_overhead.py
docs/: index.md
docs/examples/: basic-logging.md  basic-timing.md  index.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/guide/: configuration.md  custom-wrappers.md  index.md  trace-decorator.md
docs/reference/: api.md  index.md  performance.md
docs/stylesheets/: extra.css
examples/: basic_logging.py  basic_timing.py  index.html  otel_tracing.py
examples/basic-logging/: index.html
examples/basic-timing/: index.html
examples/big_red_button/: __main__.py  app.py  launch.py
getting-started/: index.html
guide/: index.html
guide/configuration/: index.html
guide/custom-wrappers/: index.html
guide/trace-decorator/: index.html
reference/: index.html
reference/api/: index.html
reference/performance/: index.html
search/: search_index.json
